Allow collapse of opened div, fix stylingfor collapse div

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@ $white-background: rgb(255, 255, 255);
 
 #root {
   position: relative;
-  background-color: rgb(173, 176, 183);
+  background-color:rgb(200 202 208);
   display: flex;
   justify-content: center;
   // A reminder that setting a height here means the parent wont extend down to child when overflow
